<resources>
    <string name="app_name">TVChats</string>
    <string name="login">Login</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="welcome_to_apps">Welcome to apps</string>
    <string name="already_registered">Already registered?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="enter_phone">Enter phone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="we_weill_send_you_an_one_time_password_on_this_mobile_number">We well send you an OTP on this mobile number.</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="get_otp">get otp</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="title_activity_test">Test</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="confirm">Confirm</string>
    <string name="todo">TODO</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="didn_t_receive_otp">Didn\'t Receive OTP?</string>
    <string name="profile_info">Profile Info</string>
    <string name="please_set_your_name_and_an_optional_profile_image">Please set your name and an optional profile image.</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="type_your_name">Type your name</string>
    <string name="search">Search</string>
    <string name="messages">Messages</string>
    <string name="contacts">Contacts</string>
    <string name="time_line">Timeline</string>
    <string name="setting">Setting</string>
    <string name="qr_code">QR code</string>
    <string name="add">Add</string>
    <string name="add_friend_contact">Add friend contact</string>
    <string name="create_group">Create group</string>
    <string name="your_message">Your message</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_contact">ContactActivity</string>
</resources>