<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/nav_qr"
        android:icon="@drawable/ic_qr_code"
        android:title="@string/qr_code"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/ic_add"
        android:title="@string/add"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/nav_add_friend"
                android:icon="@drawable/ic_add_friend"
                android:title="@string/add_friend_contact"
                app:showAsAction="never" />
            <item
                android:id="@+id/nav_crate_group"
                android:icon="@drawable/ic_groups"
                android:title="@string/create_group"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>