<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Activities.VerifyOTPActivity">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/img_verify_otp"
        android:contentDescription="@string/todo" />

    <TextView style="@style/txtVerifyOTP" />

    <TextView
        android:id="@+id/txt_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/label"
        style="@style/belowTxtVerifyOTP"
        android:text="@string/enter_the_otp_sent_to" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center">

        <com.mukesh.OtpView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:inputType="number"
            android:itemBackground="#DDDADA"
            android:phoneNumber="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:OtpItemCount="6"
            app:OtpLineColor="@color/neon_blue"
            app:OtpViewType="line">

            <requestFocus />
        </com.mukesh.OtpView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/didn_t_receive_otp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/resend_otp"
            android:textColor="@color/neon_blue"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/btnConfirm"
        style="@style/btnGetOTP"
        android:onClick="callNextScreenFromOTP"
        android:text="@string/confirm" />
</LinearLayout>