<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".Activities.PhoneNumberActivity">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:src="@drawable/img_phone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/verify_your_phone_number"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/we_weill_send_you_an_one_time_password_on_this_mobile_number" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_Phone"
                    style="@style/editText"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_phone"
                    android:maxLength="12"
                    android:phoneNumber="true" />

                <ImageButton
                    android:layout_marginTop="5dp"
                    android:id="@+id/img_ButtonClose"
                    style="@style/btnClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:onClick="clearText" />
            </FrameLayout>

            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/btn_Continue"
                style="@style/btnInRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="switchTabSendOTP"
                android:text="Continue" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>