<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".Activities.SetupProfileActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_ViewProfile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:onClick="addImage"
        android:src="@drawable/img_avt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/profile_info"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/please_set_your_name_and_an_optional_profile_image" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_Name"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/type_your_name">

                    <requestFocus />
                </EditText>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/edt_password1"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter password"
                    android:inputType="textPassword"
                    android:paddingEnd="60dp" />

                <TextView
                    android:id="@+id/txt_show_hide1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:layout_marginRight="10dp"
                    android:onClick="test"
                    android:text="SHOW"
                    android:textColor="@color/gray_ccc"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/edt_password2"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Comfirm password"
                    android:inputType="textPassword"
                    android:paddingEnd="60dp">

                </EditText>

                <TextView
                    android:id="@+id/txt_show_hide2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:layout_marginRight="10dp"
                    android:text="SHOW"
                    android:textColor="@color/gray_ccc"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </FrameLayout>

            <TextView
                android:visibility="gone"
                android:id="@+id/error_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_error"
                android:drawablePadding="5dp"
                android:text="Password Incorrect!" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_button_in_register"
                android:backgroundTint="@color/neon_blue">

                <Button
                    android:id="@+id/btn_Continue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button_in_register"
                    android:backgroundTint="@color/gray_ccc"
                    android:onClick="setupProfile"
                    android:text="Setup Profile"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@color/neon_blue"
                    android:indeterminateTint="@color/white"
                    android:visibility="gone" />
            </FrameLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>